# QT_OrangeCat

./: .gitignore  CMakeLists.txt  README.md  browser.cpp  glwidget.cpp  glwidget.h  logo.cpp  logo.h  main.cpp  mainwindow.cpp  parameterserver.cpp  parameterserver.h  res.qrc
src/: CMakeLists.txt  configuru.hpp  dataprocesswidget.cpp  dataprocesswidget.h  easylogging++.h  glwidget.cpp  glwidget.h  impl.linux.cpp  logo.h  main.cpp  mainwindow.cpp  mainwindow.h  memorymapped.cpp  memorymapped.h  parameterserver.cpp  parameterserver.h  serialportlib.cpp  urldecode.cpp  window.cpp  window.h
src/ABMDaoLib/: ABMDaoLib.pri  ABMDaoLib.pro  ABMDaoLib_global.h  abmdaolib.cpp  abmdaolib.h  windllsupport.h
src/ABMDaoLib/common/base/: basecommon.cpp  basecommon.h  baseentity.cpp  baseentity.h
src/ABMDaoLib/common/file/: fileutils.cpp  fileutils.h
src/ABMDaoLib/common/json/: jsonutils.cpp  jsonutils.h
src/ABMDaoLib/common/log/: easylogging++.h
src/ABMDaoLib/common/mysql/: SqlUtils.cpp  SqlUtils.h
src/ABMDaoLib/config/: config.cpp  config.h
src/ABMDaoLib/config/dao/: currentdatadao.cpp  currentdatadao.h
src/ABMDaoLib/config/entity/: currentdata.cpp  currentdata.h
src/ABMDaoLib/runinfo/dao/: runinfodesdao.cpp  runinfodesdao.h  runinfodrillstatsdao.cpp  runinfodrillstatsdao.h  runinfogeneraldao.cpp  runinfogeneraldao.h  runinfomatchedsystemstrackingdao.cpp  runinfomatchedsystemstrackingdao.h  runinfomudstatsdao.cpp  runinfomudstatsdao.h  runinfomwdstatsdao.cpp  runinfomwdstatsdao.h  runinforeliabilitydao.cpp  runinforeliabilitydao.h
src/ABMDaoLib/runinfo/entity/: runinfodes.cpp  runinfodes.h  runinfodrillstats.cpp  runinfodrillstats.h  runinfogeneral.cpp  runinfogeneral.h  runinfomatchedsystemstracking.cpp  runinfomatchedsystemstracking.h  runinfomudstats.cpp  runinfomudstats.h  runinfomwdstats.cpp  runinfomwdstats.h  runinforeliability.cpp  runinforeliability.h
src/ABMDaoLib/toolParam/dao/: abidao.cpp  abidao.h  dgrdao.cpp  dgrdao.h  hcimdao.cpp  hcimdao.h  pcddao.cpp  pcddao.h  pospulserdao.cpp  pospulserdao.h  toolparametersdao.cpp  toolparametersdao.h
src/ABMDaoLib/toolParam/entity/: abi.cpp  abi.h  dgr.cpp  dgr.h  hcim.cpp  hcim.h  pcd.cpp  pcd.h  pospulser.cpp  pospulser.h  toolparameters.cpp  toolparameters.h
src/ABMDaoLib/well/dao/: JsonInterface.h  configuru.hpp  jsoninterface.cpp  welldao.cpp  welldao.h  wellinfodao.cpp  wellinfodao.h  wellinfodistancesdao.cpp  wellinfodistancesdao.h  wellinfoformationdao.cpp  wellinfoformationdao.h  wellinfogeneraldao.cpp  wellinfogeneraldao.h  wellinfolocationdao.cpp  wellinfolocationdao.h  wellinfomatchedsystemstrackingdao.cpp  wellinfomatchedsystemstrackingdao.h  wellinfopersonneldao.cpp  wellinfopersonneldao.h  wellinfosurveyinfodao.cpp  wellinfosurveyinfodao.h
src/ABMDaoLib/well/entity/: wellinfo.cpp  wellinfo.h  wellinfodepthstatus.cpp  wellinfodepthstatus.h  wellinfodistances.cpp  wellinfodistances.h  wellinfoformation.cpp  wellinfoformation.h  wellinfogeneral.cpp  wellinfogeneral.h  wellinfolocation.cpp  wellinfolocation.h  wellinfomatchedsystemstracking.cpp  wellinfomatchedsystemstracking.h  wellinfopersonnel.cpp  wellinfopersonnel.h  wellinfosurveyinfo.cpp  wellinfosurveyinfo.h
src/build-ABMDaoLib-Desktop_Qt_5_13_2_MSVC2017_32bit-Debug/: .qmake.stash
src/log/: easylogging++.h
src/paramserv/: CMakeLists.txt  parameterserver.cpp  parameterserver.h  simplethread.h  urldecode.h  windllsupport.h
src/paramserv/udp-discovery-cpp/: CMakeLists.txt
src/samples/: browser.cpp  dataprocesswidget.cpp  dataprocesswidget.h  downloadmanagerwidget.h  glwidget.cpp  glwidget.h  impl.linux.cpp  impl.win32.cpp  logo.cpp  main.cpp  mainwindow.cpp  mainwindow.h  manchesterdecoder.cpp  manchesterdecoder.h  memorymapped.cpp  memorymapped.h  personificationdecoder.cpp  personificationdecoder.h  tabwidget.cpp  tabwidget.h  urldecode.cpp  webview.cpp  webview.h  window.cpp
src/samples/compare/: browser.h  browserwindow.cpp  dataprocesswidget.cpp  dataprocesswidget.h  main.cpp  mainwindow.cpp  webpage.cpp  window.cpp
src/samples/depth/: depthwindow.cpp  depthwindow.h  depthwindow.ui  dialogactivatysettings.cpp  dialogactivatysettings.h  dialogactivatysettings.ui  dialogcalibrationworksheet.cpp  dialogcalibrationworksheet.h  dialogcalibrationworksheet.ui  dialogdepthcalibration.cpp  dialogdepthcalibration.h  dialogdepthcalibration.ui  dialogdepthcardconfigration.cpp  dialogdepthcardconfigration.h  dialogdepthcardconfigration.ui  dialogdepthconfiguration.cpp  dialogdepthconfiguration.h  dialogdepthconfiguration.ui  dialogdepthctrl.cpp  dialogdepthctrl.h  dialogdepthctrl.ui  dialogsetupdrawworks.cpp  dialogsetupdrawworks.h  dialogsetupdrawworks.ui  displaywidget.h  main.cpp
src/samples/filter/: browserwindow.h  dataprocesswidget.cpp  dataprocesswidget.h  downloadmanagerwidget.cpp  downloadwidget.cpp  downloadwidget.h  impl.win32.cpp  logo.cpp  logo.h  main.cpp  manchesterdecoder.h  memorymapped.cpp  personificationdecoder.cpp  personificationdecoder.h  personificationdecoderv2.cpp  personificationdecoderv2.h  renderutil.cpp  renderutil.h  time.h  webpage.h  webpopupwindow.cpp  webpopupwindow.h  window.cpp  window.h
src/samples/filter/bitdecoder/: personificationdecoderv2.cpp
src/samples/filter/decoder/: highfrequencysensivitydecoder.cpp  highfrequencysensivitydecoder.h  manchesterdecoder.h  personificationdecoder.cpp  personificationdecoder.h
src/samples/filter/msgdecoder/: msgdecoder.cpp  msgdecoder.h  tinimsgdecoderv1.cpp  tinimsgdecoderv1.h  tinimsgdecoderv2.cpp  tinimsgdecoderv2.h
src/samples/gamma/: customplottest.cpp  customplottest.h  customplottest.ui  customwidget.cpp  customwidget.h  glchartwidget.cpp  glchartwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorymapped.h  paramprotocol.cpp  paramprotocol.h  qteklinechat.cpp  qteklinechat.h  qteklinechat.ui  rangeslider.cpp  rangeslider.h  renderutil.h  time.cpp  time.h  type.h  window.cpp
src/samples/general/: displaywidget.cpp  displaywidget.h  main.cpp  mainwindow.cpp  memorymapped.cpp  memorymapped.h  window.h
src/unittest/: main.cpp
(+42 files in other folders)
